---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: 2021-06-14
  Features:
    - Rampant Industry compatibility
    - More Endgame Combat recipes
---------------------------------------------------------------------------------------------------
Version: 0.1.1
Date: 2021-06-13
  Features:
    - Nuclear fuel compatibility
---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 2021-06-06
  Features:
    - Menu simulation
  Fixes:
    - Delivery cannon recipes
  Changes:
    - Nuclear fuel uses tungsten (e.g. tungsten urania)
    - Now in beta
---------------------------------------------------------------------------------------------------
Version: 0.0.16
Date: 2021-05-30
  Features:
    - ja localization thanks to Sakuro
  Changes:
    - Ensure radar is not gated behind optics
---------------------------------------------------------------------------------------------------
Version: 0.0.15
Date: 2021-05-27
  Changes:
    - Tweaked tungsten plate and tungsten carbide recipes
  Features:
    - 5dims tungsten carbide recipe
---------------------------------------------------------------------------------------------------
Version: 0.0.14
Date: 2021-05-26
  Features:
    - Additional turrets compatibility
    - 5dims compatibility
  Changes:
    - Decrease icon file size a bit
---------------------------------------------------------------------------------------------------
Version: 0.0.13
Date: 2021-05-24
  Changes:
    - Minor tweak to thumbnail
  Features:
    - King Jo's compatibility
---------------------------------------------------------------------------------------------------
Version: 0.0.12
Date: 2021-05-24
  Features:
    - Zombie's compatibility, nuclear furnace, mega furnace, mundas
---------------------------------------------------------------------------------------------------
Version: 0.0.11
Date: 2021-05-23