@@ -1,6 +1,6 @@
 {
     "name": "bztungsten",
-    "version": "0.1.1",
+    "version": "0.1.2",
     "factorio_version": "1.1",
     "title": "Tungsten",
     "author": "Brevven",
