@@ -4,6 +4,7 @@ Date: 2021-06-14
   Features:
     - Rampant Industry compatibility
     - More Endgame Combat recipes
+    - Realistic Reactors
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.1
 Date: 2021-06-13
